2001-02-06  Hans Petter Jansson  <hpj@ximian.com>

	* media.pl.in: (xst_media_xml_print): Implement.

2001-02-06  Hans Petter Jansson  <hpj@ximian.com>

	* be.pl.in: (be_xml_print_state): Implement.

2001-02-06  Tambet Ingo  <tambet@ximian.com>

	* boot-conf.in: Get some more stuff out of lilo.conf

2001-02-06  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Disabled scanning so that UI testing becomes
	  less of a pain. Will have to work out a switch to enable it
	  later.

2001-02-06  Hans Petter Jansson  <hpj@ximian.com>

	* Makefile.in: Added media.pl to the list of targets.

2001-02-06  Arturo Espinosa  <arturo@ximian.com>

	* replace.pl.in: xst_replace_join_hash, the last of the replacing
	  functions for network to be finished.
	* network-conf.in: bug in xml_parse_network for nameserver and 
	  searchdomain.
	* General bug fixes on all the new code and other parts.
	* All general network param writing is ready. Interfaces is the only 
	  missing.
	

2001-02-06  Arturo Espinosa  <arturo@ximian.com>

	* be.pl.in: be_buffer_clean, be_buffer_join_lines: new functions to
	  help with in-line editting.
	* network-conf.in: support for "auto" and "description" tags when
	  parsing: forgot these.
	* network.pl.in: xst_map_dist -> be_map_dist, pass the hash with
	  the configuration to the replace_with_table function.
	* replace.pl.in: Lots of code, for writing configuration. Partialy
	  tested, but hash replacing is missing still.

2001-02-05  Tambet Ingo  <tambet@ximian.com>

	* Makefile.am (backends): Added boot-conf into build

	* boot-conf.in: New file.

2001-02-05  Arturo Espinosa  <arturo@ximian.com>

	* be.pl.in: (be_buffer_{load,save}): load a file into an array buffer
	and save it back.
	(be_map_dist): moved from network.pl.in.
	* network.pl.in: minor & typos.
	* replace.pl.in: routines for in-line replacing.
	* Makefile.am: install replace routines.
	* .cvsignore: ignore replace routines .pl file.

2001-02-05  Hans Petter Jansson  <hpj@ximian.com>